Fix Heart Icon On Mobile Devices

--- a/src/index.css
+++ b/src/index.css
@@ -161,16 +161,13 @@ align-items: center;
 
 
 
-.is-favorite,.not-favorite{
-  font-size: 30px;
+.favorite{
+  font-size: 40px;
   color: #2600ff;
   cursor: pointer;
   text-shadow: 1px 1px 3px #2C48F3;
 }
-.not-favorite{
-  color: white;
-  text-shadow: 0px 1px 6px #000000;
-}
+
 
 .rating-section{
   display: flex;
@@ -180,13 +177,11 @@ align-items: center;
   color:  #ffffff;
   font-size: 25px;
   background-color: #2C48F3;
-  padding: 0px 15px;
+  padding: 5px 15px;
   margin: 0;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 255, 0.25) 0px 2px 5px -1px, rgba(66, 4, 236, 0.3) 0px 1px 3px -1px;
   cursor: pointer;
-  display: flex;
-  align-items: center;
 }
 .vote-counter{
   font-size: 15px;
